# flappy-girl

./: CMakeLists.txt  main.cpp
glad/: CMakeLists.txt
include/: shader.h  shader_string.h
